--- a/doc/gnutls.texi
+++ b/doc/gnutls.texi
@@ -147,11 +147,13 @@ Documentation License''.
 
 @menu
 * Preface::
-* The Library::
+* Introduction to GnuTLS::
 * Introduction to TLS::
-* Authentication methods::
+* Certificate authentication::
+* Shared-key and anonymous authentication::
 * More on certificate authentication::
 * How to use GnuTLS in applications::
+* GnuTLS application examples::
 * Other included programs::
 * Internal architecture of GnuTLS::
 * Support::
@@ -171,11 +173,15 @@ Documentation License''.
 
 @include cha-intro-tls.texi
 
-@include cha-auth.texi
-
 @include cha-cert-auth.texi
 
+@include cha-shared-key.texi
+
+@include cha-cert-auth2.texi
+
 @include cha-gtls-app.texi
+
+@include cha-gtls-examples.texi
 
 @include cha-programs.texi
 
