--- a/doc/cha-gtls-examples.texi
+++ b/doc/cha-gtls-examples.texi
@@ -52,8 +52,7 @@ communicates with servers that use @acronym{X.509} or
 @acronym{OpenPGP} certificate authentication. The following client is
 a very simple @acronym{TLS} client, which uses the high level verification
 functions for certificates, but does not support session
-resumption. The TCP functions defined in this example are used 
-in most of the other examples below, without redefining them.
+resumption. 
 
 @verbatiminclude examples/ex-rfc2818.c
 
